--- a/HomeMatic Control/.cproject
+++ b/HomeMatic Control/.cproject
@@ -58,7 +58,7 @@
 									<listOptionValue builtIn="false" value="/usr/local/lib"/>
 								</option>
 								<option id="gnu.cpp.link.option.soname.714765233" name="Shared object name (-Wl,-soname=)" superClass="gnu.cpp.link.option.soname" value="" valueType="string"/>
-								<option id="gnu.cpp.link.option.userobjs.1847070544" name="Other objects" superClass="gnu.cpp.link.option.userobjs" valueType="userObjs"/>
+								<option id="gnu.cpp.link.option.userobjs.1847070544" name="Other objects" superClass="gnu.cpp.link.option.userobjs"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.58943301" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -97,7 +97,9 @@
 								<option id="gnu.cpp.compiler.exe.release.option.debugging.level.890164393" name="Debug Level" superClass="gnu.cpp.compiler.exe.release.option.debugging.level" value="gnu.cpp.compiler.debugging.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.other.other.464026870" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -std=c++11" valueType="string"/>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.443197908" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def"/>
-								<option id="gnu.cpp.compiler.option.include.paths.2065907104" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths"/>
+								<option id="gnu.cpp.compiler.option.include.paths.2065907104" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/usr/local/include"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.852683577" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.release.1061484532" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.release">
@@ -109,10 +111,20 @@
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.953419484" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.release">
 								<option id="gnu.cpp.link.option.libs.262535735" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="pthread"/>
+									<listOptionValue builtIn="false" value="xmlrpc_util"/>
+									<listOptionValue builtIn="false" value="xmlrpc_xmltok"/>
+									<listOptionValue builtIn="false" value="xmlrpc_xmlparse"/>
+									<listOptionValue builtIn="false" value="xmlrpc"/>
+									<listOptionValue builtIn="false" value="xmlrpc++"/>
+									<listOptionValue builtIn="false" value="xmlrpc_abyss"/>
+									<listOptionValue builtIn="false" value="xmlrpc_server"/>
+									<listOptionValue builtIn="false" value="xmlrpc_server_abyss"/>
+									<listOptionValue builtIn="false" value="xmlrpc_server++"/>
+									<listOptionValue builtIn="false" value="xmlrpc_server_abyss++"/>
 									<listOptionValue builtIn="false" value="sqlite3"/>
 									<listOptionValue builtIn="false" value="ncurses"/>
 								</option>
-								<option id="gnu.cpp.link.option.paths.2136875120" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths"/>
+								<option id="gnu.cpp.link.option.paths.2136875120" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.281651727" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -147,10 +159,10 @@
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886;cdt.managedbuild.config.gnu.exe.release.636457886.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1893626820;cdt.managedbuild.tool.gnu.cpp.compiler.input.852683577">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.275614584;cdt.managedbuild.config.gnu.exe.debug.275614584.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1796046322;cdt.managedbuild.tool.gnu.cpp.compiler.input.1073675196">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886;cdt.managedbuild.config.gnu.exe.release.636457886.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.1061484532;cdt.managedbuild.tool.gnu.c.compiler.input.2012490794">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886;cdt.managedbuild.config.gnu.exe.release.636457886.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.1061484532;cdt.managedbuild.tool.gnu.c.compiler.input.2012490794">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.275614584;cdt.managedbuild.config.gnu.exe.debug.275614584.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1796046322;cdt.managedbuild.tool.gnu.cpp.compiler.input.1073675196">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.275614584;cdt.managedbuild.config.gnu.exe.debug.275614584.;cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1788255390;cdt.managedbuild.tool.gnu.c.compiler.input.1181581060">
