--- a/HomeMatic Control/makefile
+++ b/HomeMatic Control/makefile
@@ -43,7 +43,7 @@ all: HomeMatic\ Control
 HomeMatic\ Control: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++ -L/usr/lib/pkgconfig/../../lib -o "HomeMatic Control" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++  -o "HomeMatic Control" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
