--- a/HomeMatic Control/Debug/makefile
+++ b/HomeMatic Control/Debug/makefile
@@ -45,7 +45,7 @@ all: HomeMatic\ Control
 HomeMatic\ Control: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++ -L/usr/local/lib -o "HomeMatic Control" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++  -o "HomeMatic Control" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
