--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -23,3 +23,12 @@ rfDevice = /dev/ttyACM0
 
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
+
+#### Don't change settings below ####
+
+# Default: prioritizeThreads = true
+prioritizeThreads = true
+
+# Default: workerThreadWindow = 3000
+workerThreadWindow = 3000
+
