--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -24,7 +24,7 @@ rfDevice = /dev/ttyACM0
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
 
-#### Don't change settings below ####
+#### Don't change settings below unless you know exactly what you're doing ####
 
 # Default: prioritizeThreads = true
 prioritizeThreads = true
@@ -32,3 +32,8 @@ prioritizeThreads = true
 # Default: workerThreadWindow = 3000
 workerThreadWindow = 3000
 
+# Default: bidCoSResponseDelay = 90
+bidCoSResponseDelay = 90
+
+# Default: rpcServerThreadPriority = 10
+rpcServerThreadPriority = 10
