SSL tunnel support

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -24,6 +24,10 @@ rfDevice = /dev/ttyACM0
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
 
+# Redirects communication to client's XML RPC server through ssl tunnel
+# by replacing the provided address (or hostname) with 127.0.0.1
+# redirecttossltunnel = 192.168.0.1
+
 #### Don't change settings below unless you know exactly what you're doing ####
 
 # Default: prioritizeThreads = true
