SSL tunnel support

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -24,9 +24,13 @@ rfDevice = /dev/ttyACM0
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
 
-# Redirects communication to client's XML RPC server through ssl tunnel
-# by replacing the provided address (or hostname) with 127.0.0.1
-# redirecttossltunnel = 192.168.0.1
+# Most XML RPC client's also provide a XML RPC server for sending events to.
+# To redirect communication to a client's XML RPC server through a ssl tunnel
+# specify the client's XML RPC server address here.
+# Homegear replaces the provided address (or hostname) with 127.0.0.1 (or ::1 when IPv6 is used)
+# redirectToSSLTunnel = 192.168.0.1
+# redirectToSSLTunnel = fdef:abcd:bcda::1234
+# redirectToSSLTunnel = 192.168.0.10
 
 #### Don't change settings below unless you know exactly what you're doing ####
 
