--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -32,6 +32,10 @@ logfilePath = /var/log/homegear
 # redirectToSSLTunnel = fdef:abcd:bcda::1234
 # redirectToSSLTunnel = 192.168.0.10
 
+# Default: bidCoSResponseDelay = 90
+# Should be "90" for CUL and "100" for TI CC1100
+bidCoSResponseDelay = 90
+
 #### Don't change settings below unless you know exactly what you're doing ####
 
 # Default: prioritizeThreads = true
@@ -39,9 +43,6 @@ prioritizeThreads = true
 
 # Default: workerThreadWindow = 3000
 workerThreadWindow = 3000
-
-# Default: bidCoSResponseDelay = 90
-bidCoSResponseDelay = 90
 
 # Default: rpcServerThreadPriority = 0
 rpcServerThreadPriority = 0
