logrotate and SIGHUP support

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -25,12 +25,12 @@ rfDevice = /dev/ttyACM0
 logfilePath = /var/log/homegear
 
 # Most XML RPC client's also provide a XML RPC server for sending events to.
-# To redirect communication to a client's XML RPC server through a ssl tunnel
+# To redirect communication to a client's XML RPC server through a ssh tunnel
 # specify the client's XML RPC server address here.
 # Homegear replaces the provided address (or hostname) with 127.0.0.1 (or ::1 when IPv6 is used)
-# redirectToSSLTunnel = 192.168.0.1
-# redirectToSSLTunnel = fdef:abcd:bcda::1234
-# redirectToSSLTunnel = 192.168.0.10
+# redirectToSSHTunnel = 192.168.0.1
+# redirectToSSHTunnel = fdef:abcd:bcda::1234
+# redirectToSSHTunnel = 192.168.0.10
 
 # Default: bidCoSResponseDelay = 90
 # Should be "90" for CUL and "100" for TI CC1100
