Increased database performance

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -14,6 +14,16 @@ rpcPort = 2001
 # Default: databasePath =
 databasePath = /var/lib/homegear/db.sql
 
+# If databaseMemoryJournal is set to true database write operations are faster but if your system
+# suffers a power loss the database might get corrupted.
+# Default: databaseMemoryJournal = true
+databaseMemoryJournal = true;
+
+# If databaseSynchronous is set to false database write operations are faster but if your system
+# suffers a power loss the database might get corrupted.
+# Default: databaseSynchronous = false
+databaseSynchronous = false;
+
 # Options: cul, cc1100
 # Default: rfDeviceType = cul
 rfDeviceType = cul
@@ -32,9 +42,9 @@ logfilePath = /var/log/homegear
 # redirectToSSHTunnel = fdef:abcd:bcda::1234
 # redirectToSSHTunnel = 192.168.0.10
 
-# Default: bidCoSResponseDelay = 90
-# Should be "90" for CUL and "100" for TI CC1100
-bidCoSResponseDelay = 90
+# Default: bidCoSResponseDelay = 95
+# Should be "95" for CUL and "100" for TI CC1100
+bidCoSResponseDelay = 95
 
 #### Don't change settings below unless you know exactly what you're doing ####
 
